Enhance model configuration and notebook for improved clarity and functionality
- Updated the workflow diagram in the Jupyter notebook to use arrow symbols for better readability.
- Added detailed descriptions for model configurations in `model_config.yaml`, specifying GPU compatibility and flash attention support.
- Increased `max_tiles` for certain models to optimize performance based on GPU capabilities.
- Enabled flash attention for models that support it, improving efficiency.
- Improved output formatting in the evaluation section of the notebook for clearer results presentation.
- Removed deprecated `torch_dtype` warnings and streamlined model loading process.

--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -19,13 +19,13 @@
     "## Workflow\n",
     "\n",
     "```\n",
-    "Turn 0: Image → Header Detection (shared)\n",
-    "    ↓\n",
-    "Python: Pattern matching → Strategy selection\n",
-    "    ↓\n",
-    "Turn 1: Image → Extraction (strategy-specific)\n",
-    "    ↓\n",
-    "Python: Parsing → Filtering → Schema fields\n",
+    "Turn 0: Image \u2192 Header Detection (shared)\n",
+    "    \u2193\n",
+    "Python: Pattern matching \u2192 Strategy selection\n",
+    "    \u2193\n",
+    "Turn 1: Image \u2192 Extraction (strategy-specific)\n",
+    "    \u2193\n",
+    "Python: Parsing \u2192 Filtering \u2192 Schema fields\n",
     "```\n",
     "\n",
     "## Configuration\n",
@@ -47,9 +47,9 @@
      "output_type": "stream",
      "text": [
       "Working directory: /home/jovyan/nfs_share/tod/LMM_POC\n",
-      "✅ Random seed set to 42 for reproducibility\n",
-      "✅ PyTorch deterministic mode enabled\n",
-      "⚠️  Note: May reduce performance\n",
+      "\u2705 Random seed set to 42 for reproducibility\n",
+      "\u2705 PyTorch deterministic mode enabled\n",
+      "\u26a0\ufe0f  Note: May reduce performance\n",
       "PyTorch version: 2.5.1\n",
       "CUDA available: True\n",
       "CUDA version: 11.8\n"
@@ -126,10 +126,16 @@
     "# ============================================================================\n",
     "# SELECT MODEL - Choose from config/model_config.yaml\n",
     "# ============================================================================\n",
-    "# Options (bfloat16 - no quantization):\n",
-    "#   \"llama_3_2_vision\", \"internvl3_8b\", \"internvl3_2b\", \"internvl3_5_8b\"\n",
-    "# Options (8-bit quantized):\n",
-    "#   \"llama_3_2_vision_8bit\", \"internvl3_8b_8bit\", \"internvl3_2b_8bit\", \"internvl3_5_8b_8bit\"\n",
+    "# InternVL3 models:\n",
+    "#   \"internvl3_2b\"      - InternVL3-2B (bfloat16, ~4GB VRAM)\n",
+    "#   \"internvl3_8b\"      - InternVL3-8B (bfloat16, L40/A10G/H200)\n",
+    "#   \"internvl3_8b_8bit\" - InternVL3-8B (8-bit quantized, V100)\n",
+    "#   \"internvl3_5_8b\"    - InternVL3.5-8B (bfloat16, H200)\n",
+    "#\n",
+    "# Llama models:\n",
+    "#   \"llama_3_2_vision\"      - Llama-3.2-Vision (bfloat16)\n",
+    "#   \"llama_3_2_vision_8bit\" - Llama-3.2-Vision (8-bit quantized)\n",
+    "\n",
     "MODEL_KEY = \"internvl3_5_8b\"\n",
     "\n",
     "# ============================================================================\n",
@@ -159,9 +165,11 @@
     "print(f\"Model path: {model_config['default_path']}\")\n",
     "print(f\"Quantization: {loading_config.get('quantization', 'none')}\")\n",
     "print(f\"Torch dtype: {loading_config.get('torch_dtype', 'bfloat16')}\")\n",
+    "print(f\"Flash attention: {loading_config.get('use_flash_attn', False)}\")\n",
     "if image_processing_config:\n",
     "    print(f\"Max tiles: {image_processing_config.get('max_tiles', 14)}\")\n",
-    "    print(f\"Input size: {image_processing_config.get('input_size', 448)}\")"
+    "    print(f\"Input size: {image_processing_config.get('input_size', 448)}\")\n",
+    ""
    ]
   },
   {
@@ -179,79 +187,23 @@
    "execution_count": 3,
    "id": "cell-5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model: InternVL3.5-8B (bfloat16)\n",
-      "  Path: /home/jovyan/nfs_share/models/InternVL3_5-8B\n",
-      "  Quantization: none\n",
-      "  Dtype: bfloat16\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading InternVL3 model...\n",
-      "  Mode: bfloat16 (no quantization)\n",
-      "  Single GPU\n",
-      "FlashAttention2 is not installed.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6196607f7dfa4bd19d31be5f006580a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Model loaded successfully!\n",
-      "  Final dtype: torch.bfloat16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Cell 3: Load model based on EXPLICIT config (no silent fallbacks)\n",
-    "import math\n",
+    "# Cell 3: Load model using common infrastructure\n",
+    "# This uses the robust model loaders with GPU-specific optimizations\n",
     "\n",
     "MODEL_PATH = model_config[\"default_path\"]\n",
     "MODEL_TYPE = model_config[\"type\"]\n",
     "QUANTIZATION = loading_config.get(\"quantization\", \"none\")\n",
     "TORCH_DTYPE_STR = loading_config.get(\"torch_dtype\", \"bfloat16\")\n",
-    "\n",
-    "# Map string dtype to torch dtype\n",
-    "DTYPE_MAP = {\n",
-    "    \"bfloat16\": torch.bfloat16,\n",
-    "    \"float16\": torch.float16,\n",
-    "    \"float32\": torch.float32,\n",
-    "}\n",
-    "TORCH_DTYPE = DTYPE_MAP.get(TORCH_DTYPE_STR, torch.bfloat16)\n",
+    "USE_FLASH_ATTN = loading_config.get(\"use_flash_attn\", False)\n",
     "\n",
     "print(f\"Loading model: {model_config['name']}\")\n",
     "print(f\"  Path: {MODEL_PATH}\")\n",
+    "print(f\"  Type: {MODEL_TYPE}\")\n",
     "print(f\"  Quantization: {QUANTIZATION}\")\n",
     "print(f\"  Dtype: {TORCH_DTYPE_STR}\")\n",
+    "print(f\"  Flash attention: {USE_FLASH_ATTN}\")\n",
     "\n",
     "if MODEL_TYPE == \"llama\":\n",
     "    # ========================================================================\n",
@@ -274,101 +226,44 @@
     "    if loading_config.get(\"tie_weights\", True):\n",
     "        try:\n",
     "            model.tie_weights()\n",
-    "            print(\"Model weights tied\")\n",
+    "            print(\"  Model weights tied\")\n",
     "        except Exception as e:\n",
-    "            print(f\"tie_weights() warning: {e}\")\n",
+    "            print(f\"  tie_weights() warning: {e}\")\n",
     "    \n",
     "    tokenizer = None\n",
-    "    model_dtype = TORCH_DTYPE\n",
+    "    \n",
+    "    # Map dtype string to torch dtype\n",
+    "    DTYPE_MAP = {\"bfloat16\": torch.bfloat16, \"float16\": torch.float16, \"float32\": torch.float32}\n",
+    "    model_dtype = DTYPE_MAP.get(TORCH_DTYPE_STR, torch.bfloat16)\n",
     "\n",
     "else:\n",
     "    # ========================================================================\n",
-    "    # INTERNVL3 MODEL LOADING - EXPLICIT CONFIG\n",
+    "    # INTERNVL3 MODEL LOADING - Using common infrastructure\n",
     "    # ========================================================================\n",
-    "    from transformers import AutoModel, AutoTokenizer, AutoConfig, BitsAndBytesConfig\n",
+    "    from common.internvl3_model_loader import load_internvl3_model\n",
     "    \n",
-    "    print(f\"Loading InternVL3 model...\")\n",
+    "    gen_config = model_config.get(\"generation\", {})\n",
     "    \n",
-    "    # Multi-GPU device mapping helper\n",
-    "    def split_model(model_path):\n",
-    "        \"\"\"Official InternVL3 multi-GPU device mapping.\"\"\"\n",
-    "        device_map = {}\n",
-    "        world_size = torch.cuda.device_count()\n",
-    "        config = AutoConfig.from_pretrained(model_path, trust_remote_code=True)\n",
-    "        num_layers = config.llm_config.num_hidden_layers\n",
-    "        \n",
-    "        num_layers_per_gpu = math.ceil(num_layers / (world_size - 0.5))\n",
-    "        num_layers_per_gpu = [num_layers_per_gpu] * world_size\n",
-    "        num_layers_per_gpu[0] = math.ceil(num_layers_per_gpu[0] * 0.5)\n",
-    "        \n",
-    "        layer_cnt = 0\n",
-    "        for i, num_layer in enumerate(num_layers_per_gpu):\n",
-    "            for _ in range(num_layer):\n",
-    "                device_map[f'language_model.model.layers.{layer_cnt}'] = i\n",
-    "                layer_cnt += 1\n",
-    "        \n",
-    "        device_map['vision_model'] = 0\n",
-    "        device_map['mlp1'] = 0\n",
-    "        device_map['language_model.model.tok_embeddings'] = 0\n",
-    "        device_map['language_model.model.embed_tokens'] = 0\n",
-    "        device_map['language_model.output'] = 0\n",
-    "        device_map['language_model.model.norm'] = 0\n",
-    "        device_map['language_model.model.rotary_emb'] = 0\n",
-    "        device_map['language_model.lm_head'] = 0\n",
-    "        device_map[f'language_model.model.layers.{num_layers - 1}'] = 0\n",
-    "        \n",
-    "        return device_map\n",
-    "    \n",
-    "    if QUANTIZATION == \"8bit\":\n",
-    "        # 8-bit quantized loading (explicit config)\n",
-    "        print(\"  Mode: 8-bit quantization\")\n",
-    "        quantization_config = BitsAndBytesConfig(\n",
-    "            load_in_8bit=True,\n",
-    "            llm_int8_enable_fp32_cpu_offload=False\n",
-    "        )\n",
-    "        model = AutoModel.from_pretrained(\n",
-    "            MODEL_PATH,\n",
-    "            torch_dtype=TORCH_DTYPE,\n",
-    "            low_cpu_mem_usage=loading_config.get(\"low_cpu_mem_usage\", True),\n",
-    "            use_flash_attn=loading_config.get(\"use_flash_attn\", False),\n",
-    "            trust_remote_code=loading_config.get(\"trust_remote_code\", True),\n",
-    "            quantization_config=quantization_config,\n",
-    "            device_map={\"\": 0},\n",
-    "        ).eval()\n",
-    "    else:\n",
-    "        # Non-quantized loading (bfloat16/float16)\n",
-    "        print(f\"  Mode: {TORCH_DTYPE_STR} (no quantization)\")\n",
-    "        world_size = torch.cuda.device_count()\n",
-    "        \n",
-    "        if world_size > 1:\n",
-    "            print(f\"  Multi-GPU: {world_size} GPUs detected\")\n",
-    "            device_map = split_model(MODEL_PATH)\n",
-    "        else:\n",
-    "            print(\"  Single GPU\")\n",
-    "            device_map = {\"\": 0}\n",
-    "        \n",
-    "        model = AutoModel.from_pretrained(\n",
-    "            MODEL_PATH,\n",
-    "            torch_dtype=TORCH_DTYPE,\n",
-    "            low_cpu_mem_usage=loading_config.get(\"low_cpu_mem_usage\", True),\n",
-    "            use_flash_attn=loading_config.get(\"use_flash_attn\", False),\n",
-    "            trust_remote_code=loading_config.get(\"trust_remote_code\", True),\n",
-    "            device_map=device_map,\n",
-    "        ).eval()\n",
-    "    \n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        MODEL_PATH, \n",
-    "        trust_remote_code=True, \n",
-    "        use_fast=False\n",
+    "    model, tokenizer = load_internvl3_model(\n",
+    "        model_path=MODEL_PATH,\n",
+    "        use_quantization=(QUANTIZATION == \"8bit\"),\n",
+    "        device_map=loading_config.get(\"device_map\", \"auto\"),\n",
+    "        max_new_tokens=gen_config.get(\"max_new_tokens\", 4096),\n",
+    "        torch_dtype=TORCH_DTYPE_STR,\n",
+    "        low_cpu_mem_usage=loading_config.get(\"low_cpu_mem_usage\", True),\n",
+    "        use_flash_attn=USE_FLASH_ATTN,\n",
+    "        verbose=True\n",
     "    )\n",
-    "    if tokenizer.pad_token_id is None:\n",
-    "        tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "    \n",
     "    processor = None\n",
-    "    model_dtype = TORCH_DTYPE\n",
+    "    \n",
+    "    # Map dtype string to torch dtype\n",
+    "    DTYPE_MAP = {\"bfloat16\": torch.bfloat16, \"float16\": torch.float16, \"float32\": torch.float32}\n",
+    "    model_dtype = DTYPE_MAP.get(TORCH_DTYPE_STR, torch.bfloat16)\n",
     "\n",
-    "print(f\"\\nModel loaded successfully!\")\n",
-    "print(f\"  Final dtype: {model_dtype}\")"
+    "print(f\"\\n\u2705 Model loaded successfully!\")\n",
+    "print(f\"  Final dtype: {model_dtype}\")\n",
+    ""
    ]
   },
   {
@@ -679,38 +574,7 @@
    "execution_count": 8,
    "id": "cell-14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: field_types_from_yaml = {'monetary': ['GST_AMOUNT', 'TOTAL_AMOUNT', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'boolean': ['IS_GST_INCLUDED'], 'list': ['LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'date': ['INVOICE_DATE', 'STATEMENT_DATE_RANGE', 'TRANSACTION_DATES']}\n",
-      "DEBUG: boolean fields from YAML = ['IS_GST_INCLUDED']\n",
-      "DEBUG: self.boolean_fields = ['IS_GST_INCLUDED']\n",
-      "DEBUG _ensure_fields_loaded: BOOLEAN_FIELDS = ['IS_GST_INCLUDED']\n",
-      "Loading ground truth...\n",
-      "📊 Ground truth CSV loaded with 13 rows and 20 columns\n",
-      "📋 Available columns: ['image_file', 'DOCUMENT_TYPE', 'BUSINESS_ABN', 'BUSINESS_ADDRESS', 'GST_AMOUNT', 'INVOICE_DATE', 'IS_GST_INCLUDED', 'LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'PAYER_ADDRESS', 'PAYER_NAME', 'STATEMENT_DATE_RANGE', 'SUPPLIER_NAME', 'TOTAL_AMOUNT', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE']\n",
-      "✅ Using 'image_file' as image identifier column\n",
-      "✅ Ground truth mapping created for 13 images\n",
-      "Looking up: image_009.png\n",
-      "Ground truth found!\n",
-      "\n",
-      "============================================================\n",
-      "EVALUATION RESULTS\n",
-      "============================================================\n",
-      "OK      DOCUMENT_TYPE                  F1: 100.0%\n",
-      "OK      STATEMENT_DATE_RANGE           F1: 100.0%\n",
-      "PARTIAL TRANSACTION_DATES              F1: 96.6%\n",
-      "PARTIAL LINE_ITEM_DESCRIPTIONS         F1: 88.9%\n",
-      "PARTIAL TRANSACTION_AMOUNTS_PAID       F1: 96.6%\n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "OVERALL F1 SCORE: 96.4%\n",
-      "============================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 8: Load ground truth and evaluate\n",
     "import pandas as pd\n",
@@ -745,11 +609,16 @@
     "        print(\"Ground truth found!\")\n",
     "        \n",
     "        # Calculate F1 scores\n",
-    "        print(\"\\n\" + \"=\"*60)\n",
-    "        print(\"EVALUATION RESULTS\")\n",
-    "        print(\"=\"*60)\n",
+    "        print(\"\\n\" + \"=\"*90)\n",
+    "        print(f\"FIELD COMPARISON - {image_filename}\")\n",
+    "        print(\"=\"*90)\n",
+    "        \n",
+    "        print(f\"\\n{'Status':<8} {'Field':<30} {'F1':>8} {'Prec':>8} {'Recall':>8}\")\n",
+    "        print(\"-\"*90)\n",
     "        \n",
     "        total_f1 = 0.0\n",
+    "        field_results = {}\n",
+    "        \n",
     "        for field in BANK_STATEMENT_FIELDS:\n",
     "            extracted = schema.get(field, \"NOT_FOUND\")\n",
     "            ground_truth = gt_data.get(field, \"NOT_FOUND\")\n",
@@ -759,21 +628,49 @@
     "            \n",
     "            result_eval = calculate_field_accuracy_f1(extracted, ground_truth, field)\n",
     "            f1 = result_eval.get(\"f1_score\", 0.0)\n",
+    "            precision = result_eval.get(\"precision\", 0.0)\n",
+    "            recall = result_eval.get(\"recall\", 0.0)\n",
     "            total_f1 += f1\n",
     "            \n",
-    "            status = \"OK\" if f1 == 1.0 else (\"PARTIAL\" if f1 >= 0.5 else \"FAIL\")\n",
-    "            print(f\"{status:7} {field:30} F1: {f1:.1%}\")\n",
+    "            field_results[field] = {\n",
+    "                \"extracted\": extracted,\n",
+    "                \"ground_truth\": ground_truth,\n",
+    "                \"f1\": f1,\n",
+    "                \"precision\": precision,\n",
+    "                \"recall\": recall\n",
+    "            }\n",
+    "            \n",
+    "            if f1 == 1.0:\n",
+    "                status = \"\u2705 OK\"\n",
+    "            elif f1 >= 0.5:\n",
+    "                status = \"\u26a0\ufe0f PART\"\n",
+    "            else:\n",
+    "                status = \"\u274c FAIL\"\n",
+    "            \n",
+    "            print(f\"{status:<8} {field:<30} {f1:>7.1%} {precision:>7.1%} {recall:>7.1%}\")\n",
+    "        \n",
+    "        print(\"-\"*90)\n",
+    "        \n",
+    "        # Show detailed values (no truncation)\n",
+    "        print(\"\\n\ud83d\udccb DETAILED VALUES:\")\n",
+    "        print(\"-\"*90)\n",
+    "        for field in BANK_STATEMENT_FIELDS:\n",
+    "            fr = field_results[field]\n",
+    "            print(f\"\\n{field}:\")\n",
+    "            print(f\"  Extracted:    {fr['extracted']}\")\n",
+    "            print(f\"  Ground Truth: {fr['ground_truth']}\")\n",
     "        \n",
     "        overall_f1 = total_f1 / len(BANK_STATEMENT_FIELDS)\n",
-    "        print(\"\\n\" + \"-\"*60)\n",
-    "        print(f\"OVERALL F1 SCORE: {overall_f1:.1%}\")\n",
-    "        print(\"=\"*60)\n",
+    "        print(\"\\n\" + \"=\"*90)\n",
+    "        print(f\"\ud83d\udcca OVERALL F1 SCORE: {overall_f1:.1%}\")\n",
+    "        print(\"=\"*90)\n",
     "    else:\n",
     "        print(f\"No ground truth found for: {image_filename}\")\n",
     "        \n",
     "except FileNotFoundError:\n",
     "    print(f\"Ground truth file not found: {GROUND_TRUTH_PATH}\")\n",
-    "    print(\"Skipping evaluation.\")"
+    "    print(\"Skipping evaluation.\")\n",
+    ""
    ]
   },
   {
