:construction: Remote job commit 34

--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef288c11bb8f4d8782ea3091bdb67f7b",
+       "model_id": "5e4332d7ba5d4fa5a001ae5b6ba2d1db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -836,11 +836,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cell-9",
    "metadata": {},
-   "outputs": [],
-   "source": "# Cell 5: Create extractor and run extraction\nfrom common.unified_bank_extractor import UnifiedBankExtractor\n\n# Create extractor with image processing config from YAML\n# Balance correction uses balance arithmetic to fix LLM misclassifications\nextractor = UnifiedBankExtractor(\n    model=model,\n    tokenizer=tokenizer,\n    processor=processor,\n    model_type=MODEL_TYPE,\n    model_dtype=model_dtype,\n    image_processing_config=image_processing_config,\n    use_balance_correction=True,  # ENABLED: corrects debit/credit misclassifications\n)\n\nprint(\"=\"*60)\nprint(\"UNIFIED BANK STATEMENT EXTRACTION\")\nprint(\"=\"*60)\nprint(f\"Model type: {MODEL_TYPE}\")\nif MODEL_TYPE == \"internvl3\":\n    print(f\"Max tiles: {extractor.max_tiles}\")\n    print(f\"Input size: {extractor.input_size}\")\nprint(f\"Balance correction: {'enabled' if extractor.use_balance_correction else 'disabled'}\")\n\n# Run extraction\nresult = extractor.extract(image)\n\nprint(\"\\n\" + \"=\"*60)\nprint(\"EXTRACTION COMPLETE\")\nprint(\"=\"*60)"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "UNIFIED BANK STATEMENT EXTRACTION\n",
+      "============================================================\n",
+      "Model type: llama\n",
+      "Balance correction: enabled\n",
+      "Turn 0: Detecting headers...\n",
+      "  Detected 6 headers: ['Transaction Statement Column Headers', 'Date', 'Transaction', 'Withdrawal', 'Deposit', 'Balance']\n",
+      "  Balance column: Balance\n",
+      "Strategy: BALANCE_DESCRIPTION (Balance column detected)\n",
+      "Turn 1: Extracting transactions...\n",
+      "  Parsed 15 transactions\n",
+      "  Date order: Chronological: 08/08/2025 → 30/08/2025\n",
+      "  Balance correction: Transactions: 15, Debits: 10, Credits: 5, Corrections: 3 (type swaps: 3)\n",
+      "  Filtered to 10 debit transactions\n",
+      "\n",
+      "============================================================\n",
+      "EXTRACTION COMPLETE\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 5: Create extractor and run extraction\n",
+    "from common.unified_bank_extractor import UnifiedBankExtractor\n",
+    "\n",
+    "# Create extractor with image processing config from YAML\n",
+    "# Balance correction uses balance arithmetic to fix LLM misclassifications\n",
+    "extractor = UnifiedBankExtractor(\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    processor=processor,\n",
+    "    model_type=MODEL_TYPE,\n",
+    "    model_dtype=model_dtype,\n",
+    "    image_processing_config=image_processing_config,\n",
+    "    use_balance_correction=True,  # ENABLED: corrects debit/credit misclassifications\n",
+    ")\n",
+    "\n",
+    "print(\"=\"*60)\n",
+    "print(\"UNIFIED BANK STATEMENT EXTRACTION\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Model type: {MODEL_TYPE}\")\n",
+    "if MODEL_TYPE == \"internvl3\":\n",
+    "    print(f\"Max tiles: {extractor.max_tiles}\")\n",
+    "    print(f\"Input size: {extractor.input_size}\")\n",
+    "print(f\"Balance correction: {'enabled' if extractor.use_balance_correction else 'disabled'}\")\n",
+    "\n",
+    "# Run extraction\n",
+    "result = extractor.extract(image)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"EXTRACTION COMPLETE\")\n",
+    "print(\"=\"*60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -852,11 +908,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cell-11",
    "metadata": {},
-   "outputs": [],
-   "source": "# Cell 6: Display extraction results\nprint(\"=\"*60)\nprint(\"EXTRACTION METADATA\")\nprint(\"=\"*60)\nprint(f\"Strategy used: {result.strategy_used}\")\nprint(f\"Turns executed: {result.turns_executed}\")\nprint(f\"Headers detected: {result.headers_detected}\")\nif result.column_mapping:\n    print(f\"\\nColumn mapping:\")\n    print(f\"  Date: {result.column_mapping.date}\")\n    print(f\"  Description: {result.column_mapping.description}\")\n    print(f\"  Debit: {result.column_mapping.debit}\")\n    print(f\"  Credit: {result.column_mapping.credit}\")\n    print(f\"  Balance: {result.column_mapping.balance}\")\n\n# Display balance correction stats\nif result.correction_stats:\n    print(f\"\\nBalance correction:\")\n    print(f\"  Total transactions: {result.correction_stats.total_transactions}\")\n    print(f\"  Debits identified: {result.correction_stats.debits_found}\")\n    print(f\"  Credits identified: {result.correction_stats.credits_found}\")\n    print(f\"  Corrections made: {result.correction_stats.corrections_made}\")\n    if result.correction_stats.corrections_made > 0:\n        print(f\"    - Type swaps (debit<->credit): {result.correction_stats.type_corrections}\")\n    if result.correction_stats.unparseable_balances > 0:\n        print(f\"  Unparseable balances: {result.correction_stats.unparseable_balances}\")\n\nprint(\"\\n\" + \"=\"*60)\nprint(\"EXTRACTED SCHEMA FIELDS\")\nprint(\"=\"*60)\nschema = result.to_schema_dict()\nfor field, value in schema.items():\n    display_value = str(value)[:100] + \"...\" if len(str(value)) > 100 else str(value)\n    print(f\"\\n{field}:\")\n    print(f\"  {display_value}\")\n\nprint(\"\\n\" + \"=\"*60)\nprint(\"TRANSACTION SUMMARY\")\nprint(\"=\"*60)\nprint(f\"Total debit transactions: {len(result.transaction_dates)}\")\nprint(f\"Date range: {result.statement_date_range}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "EXTRACTION METADATA\n",
+      "============================================================\n",
+      "Strategy used: balance_description_2turn\n",
+      "Turns executed: 2\n",
+      "Headers detected: ['Transaction Statement Column Headers', 'Date', 'Transaction', 'Withdrawal', 'Deposit', 'Balance']\n",
+      "\n",
+      "Column mapping:\n",
+      "  Date: Date\n",
+      "  Description: Transaction\n",
+      "  Debit: Withdrawal\n",
+      "  Credit: Deposit\n",
+      "  Balance: Balance\n",
+      "\n",
+      "Balance correction:\n",
+      "  Total transactions: 15\n",
+      "  Debits identified: 10\n",
+      "  Credits identified: 5\n",
+      "  Corrections made: 3\n",
+      "    - Type swaps (debit<->credit): 3\n",
+      "\n",
+      "============================================================\n",
+      "EXTRACTED SCHEMA FIELDS\n",
+      "============================================================\n",
+      "\n",
+      "DOCUMENT_TYPE:\n",
+      "  BANK_STATEMENT\n",
+      "\n",
+      "STATEMENT_DATE_RANGE:\n",
+      "  08/08/2025 - 30/08/2025\n",
+      "\n",
+      "TRANSACTION_DATES:\n",
+      "  08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/202...\n",
+      "\n",
+      "LINE_ITEM_DESCRIPTIONS:\n",
+      "  Card Purchase KMART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WO...\n",
+      "\n",
+      "TRANSACTION_AMOUNTS_PAID:\n",
+      "  $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992....\n",
+      "\n",
+      "============================================================\n",
+      "TRANSACTION SUMMARY\n",
+      "============================================================\n",
+      "Total debit transactions: 10\n",
+      "Date range: 08/08/2025 - 30/08/2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 6: Display extraction results\n",
+    "print(\"=\"*60)\n",
+    "print(\"EXTRACTION METADATA\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Strategy used: {result.strategy_used}\")\n",
+    "print(f\"Turns executed: {result.turns_executed}\")\n",
+    "print(f\"Headers detected: {result.headers_detected}\")\n",
+    "if result.column_mapping:\n",
+    "    print(f\"\\nColumn mapping:\")\n",
+    "    print(f\"  Date: {result.column_mapping.date}\")\n",
+    "    print(f\"  Description: {result.column_mapping.description}\")\n",
+    "    print(f\"  Debit: {result.column_mapping.debit}\")\n",
+    "    print(f\"  Credit: {result.column_mapping.credit}\")\n",
+    "    print(f\"  Balance: {result.column_mapping.balance}\")\n",
+    "\n",
+    "# Display balance correction stats\n",
+    "if result.correction_stats:\n",
+    "    print(f\"\\nBalance correction:\")\n",
+    "    print(f\"  Total transactions: {result.correction_stats.total_transactions}\")\n",
+    "    print(f\"  Debits identified: {result.correction_stats.debits_found}\")\n",
+    "    print(f\"  Credits identified: {result.correction_stats.credits_found}\")\n",
+    "    print(f\"  Corrections made: {result.correction_stats.corrections_made}\")\n",
+    "    if result.correction_stats.corrections_made > 0:\n",
+    "        print(f\"    - Type swaps (debit<->credit): {result.correction_stats.type_corrections}\")\n",
+    "    if result.correction_stats.unparseable_balances > 0:\n",
+    "        print(f\"  Unparseable balances: {result.correction_stats.unparseable_balances}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"EXTRACTED SCHEMA FIELDS\")\n",
+    "print(\"=\"*60)\n",
+    "schema = result.to_schema_dict()\n",
+    "for field, value in schema.items():\n",
+    "    display_value = str(value)[:100] + \"...\" if len(str(value)) > 100 else str(value)\n",
+    "    print(f\"\\n{field}:\")\n",
+    "    print(f\"  {display_value}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"TRANSACTION SUMMARY\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Total debit transactions: {len(result.transaction_dates)}\")\n",
+    "print(f\"Date range: {result.statement_date_range}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -876,15 +1026,11 @@
       "3. [09/08/2025] Contactless Payment BUNNINGS - $850.65\n",
       "4. [15/08/2025] EFTPOS Purchase WOOLWORTHS - $1215.38\n",
       "5. [15/08/2025] Direct Debit ACME CORP PTY LTD - $1662.22\n",
-      "6. [18/08/2025] Interest Payment - $4933.50\n",
-      "7. [18/08/2025] EFTPOS Purchase WOOLWORTHS - $342.06\n",
-      "8. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET - $1077.60\n",
-      "9. [22/08/2025] Refund BIG W - $1488.27\n",
-      "10. [25/08/2025] Insurance Premium AGL - $437.75\n",
-      "11. [27/08/2025] Direct Credit SALARY - $1142.92\n",
-      "12. [30/08/2025] Direct Credit SALARY - $4540.20\n",
-      "13. [30/08/2025] ATM Withdrawal WESTPAC ATM - $1724.98\n",
-      "14. [30/08/2025] Subscription Spotify - $1992.32\n"
+      "6. [18/08/2025] EFTPOS Purchase WOOLWORTHS - $342.06\n",
+      "7. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET - $1077.60\n",
+      "8. [25/08/2025] Insurance Premium AGL - $437.75\n",
+      "9. [30/08/2025] ATM Withdrawal WESTPAC ATM - $1724.98\n",
+      "10. [30/08/2025] Subscription Spotify - $1992.32\n"
      ]
     }
    ],
@@ -942,9 +1088,9 @@
       "------------------------------------------------------------------------------------------\n",
       "✅ OK     DOCUMENT_TYPE                   100.0%  100.0%  100.0%\n",
       "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
-      "⚠️ PART  TRANSACTION_DATES                60.0%   60.0%   60.0%\n",
-      "❌ FAIL   LINE_ITEM_DESCRIPTIONS           13.3%   20.0%   10.0%\n",
-      "⚠️ PART  TRANSACTION_AMOUNTS_PAID         52.6%   55.6%   50.0%\n",
+      "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
+      "❌ FAIL   LINE_ITEM_DESCRIPTIONS           18.2%  100.0%   10.0%\n",
+      "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
       "------------------------------------------------------------------------------------------\n",
       "\n",
       "📋 DETAILED VALUES:\n",
@@ -959,19 +1105,19 @@
       "  Ground Truth: 08/08/2025 - 30/08/2025\n",
       "\n",
       "TRANSACTION_DATES:\n",
-      "  Extracted:    08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 18/08/2025 | 20/08/2025 | 22/08/2025 | 25/08/2025 | 27/08/2025 | 30/08/2025 | 30/08/2025 | 30/08/2025\n",
+      "  Extracted:    08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/2025 | 30/08/2025 | 30/08/2025\n",
       "  Ground Truth: 08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/2025 | 30/08/2025 | 30/08/2025\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Extracted:    Card Purchase KMART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WOOLWORTHS | Direct Debit ACME CORP PTY LTD | Interest Payment | EFTPOS Purchase WOOLWORTHS | EFTPOS Purchase COLES SUPERMARKET | Refund BIG W | Insurance Premium AGL | Direct Credit SALARY | Direct Credit SALARY | ATM Withdrawal WESTPAC ATM | Subscription Spotify\n",
+      "  Extracted:    Card Purchase KMART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WOOLWORTHS | Direct Debit ACME CORP PTY LTD | EFTPOS Purchase WOOLWORTHS | EFTPOS Purchase COLES SUPERMARKET | Insurance Premium AGL | ATM Withdrawal WESTPAC ATM | Subscription Spotify\n",
       "  Ground Truth: Card Purchase KMART PERTH WA | ATM Withdrawal WESTPAC ATM PERTH WA | Contactless Payment BUNNINGS CANBERRA ACT | EFTPOS Purchase WOOLWORTHS SYDNEY NSW | Direct Debit ACME CORP PTY LTD Ref: 35203P19335534 | EFTPOS Purchase WOOLWORTHS HOBART TAS | EFTPOS Purchase COLES SUPERMARKET PERTH WA | Insurance Premium AGL Policy 95909P77005685 | ATM Withdrawal WESTPAC ATM BRISBANE QLD | Subscription Spotify Monthly 82512P11540956\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
-      "  Extracted:    $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $4933.50 | $342.06 | $1077.60 | $1488.27 | $437.75 | $1142.92 | $4540.20 | $1724.98 | $1992.32\n",
+      "  Extracted:    $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992.32\n",
       "  Ground Truth: $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992.32\n",
       "\n",
       "==========================================================================================\n",
-      "📊 OVERALL F1 SCORE: 65.2%\n",
+      "📊 OVERALL F1 SCORE: 83.6%\n",
       "==========================================================================================\n"
      ]
     }
@@ -1094,13 +1240,15 @@
       "============================================================\n",
       "RAW TURN 0 RESPONSE (Header Detection)\n",
       "============================================================\n",
-      "**Transaction Statement Column Headers:**\n",
+      "**Transaction Statement Column Headers**\n",
       "\n",
-      "*   **Date**\n",
-      "*   **Transaction**\n",
-      "*   **Withdrawal**\n",
-      "*   **Deposit**\n",
-      "*   **Balance**\n",
+      "The transaction statement in the image uses the following column headers, in order from left to right:\n",
+      "\n",
+      "* **Date**\n",
+      "* **Transaction**\n",
+      "* **Withdrawal**\n",
+      "* **Deposit**\n",
+      "* **Balance**\n",
       "\n",
       "============================================================\n",
       "RAW TURN 1 RESPONSE (Extraction)\n",
@@ -1240,9 +1388,9 @@
       "Model: Llama-3.2-11B-Vision-Instruct\n",
       "Image: /home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/bank/synthetic_multiline.png\n",
       "Strategy: balance_description_2turn\n",
-      "Headers: 5 detected\n",
+      "Headers: 6 detected\n",
       "Balance column: Balance\n",
-      "Transactions extracted: 14 debits\n",
+      "Transactions extracted: 10 debits\n",
       "Date range: 08/08/2025 - 30/08/2025\n",
       "\n",
       "Pipeline complete!\n"
