--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4332d7ba5d4fa5a001ae5b6ba2d1db",
+       "model_id": "4354b1352ead451f972683c3e3323768",
        "version_major": 2,
        "version_minor": 0
       },
@@ -854,6 +854,126 @@
       "  Balance column: Balance\n",
       "Strategy: BALANCE_DESCRIPTION (Balance column detected)\n",
       "Turn 1: Extracting transactions...\n",
+      "DEBUG: Running on GPU: NVIDIA L4\n",
+      "============================================================\n",
+      "DEBUG: TURN 1 PROMPT BEING SENT\n",
+      "============================================================\n",
+      "List all the balances in the Balance column, including:\n",
+      "- Date from the Date Header of the balance\n",
+      "- Transaction\n",
+      "- Withdrawal Amount or \"NOT_FOUND\"\n",
+      "- Deposit Amount or \"NOT_FOUND\"\n",
+      "\n",
+      "Format each balance entry like this:\n",
+      "1. **[Date]**\n",
+      "   - Transaction: [description text]\n",
+      "   - Withdrawal: [amount or NOT_FOUND]\n",
+      "   - Deposit: [amount or NOT_FOUND]\n",
+      "   - Balance: [balance amount]\n",
+      "\n",
+      "CRITICAL RULES:\n",
+      "1. List EVERY balance entry in order from top to bottom\n",
+      "2. EVERY balance entry has a date, either on the same row, or above\n",
+      "3. Include the FULL description text, not abbreviated\n",
+      "4. If amount is in Withdrawal column, put it there and use NOT_FOUND for Deposit\n",
+      "5. If amount is in Deposit column, put it there and use NOT_FOUND for Withdrawal\n",
+      "6. Do NOT skip any transactions\n",
+      "\n",
+      "============================================================\n",
+      "============================================================\n",
+      "DEBUG: RAW TURN 1 RESPONSE (first 2000 chars)\n",
+      "============================================================\n",
+      "**BALANCE ENTRIES**\n",
+      "\n",
+      "1. **08/08/2025**\n",
+      "   - Transaction: Card Purchase KMART\n",
+      "   - Withdrawal: $1488.27\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8511.73\n",
+      "\n",
+      "2. **08/08/2025**\n",
+      "   - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "   - Withdrawal: $79.00\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8432.73\n",
+      "\n",
+      "3. **09/08/2025**\n",
+      "   - Transaction: Contactless Payment BUNNINGS\n",
+      "   - Withdrawal: $850.65\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $7582.08\n",
+      "\n",
+      "4. **12/08/2025**\n",
+      "   - Transaction: Interest Payment\n",
+      "   - Withdrawal: NOT_FOUND\n",
+      "   - Deposit: $1750.42\n",
+      "   - Balance: $9332.50\n",
+      "\n",
+      "5. **15/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Withdrawal: $1215.38\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8117.12\n",
+      "\n",
+      "6. **15/08/2025**\n",
+      "   - Transaction: Direct Debit ACME CORP PTY LTD\n",
+      "   - Withdrawal: $1662.22\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $6454.90\n",
+      "\n",
+      "7. **18/08/2025**\n",
+      "   - Transaction: Interest Payment\n",
+      "   - Withdrawal: $4933.50\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $11388.40\n",
+      "\n",
+      "8. **18/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Withdrawal: $342.06\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $11046.34\n",
+      "\n",
+      "9. **20/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET\n",
+      "   - Withdrawal: $1077.60\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $9968.74\n",
+      "\n",
+      "10. **22/08/2025**\n",
+      "    - Transaction: Refund BIG W\n",
+      "    - Withdrawal: $1488.27\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $11457.01\n",
+      "\n",
+      "11. **25/08/2025**\n",
+      "    - Transaction: Insurance Premium AGL\n",
+      "    - Withdrawal: $437.75\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $11019.26\n",
+      "\n",
+      "12. **27/08/2025**\n",
+      "    - Transaction: Direct Credit SALARY\n",
+      "    - Withdrawal: $1142.92\n",
+      "    - Deposit: $12162.18\n",
+      "    - Balance: $12162.18\n",
+      "\n",
+      "13. **30/08/2025**\n",
+      "    - Transaction: Direct Credit SALARY\n",
+      "    - Withdrawal: $4540.20\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $16702.38\n",
+      "\n",
+      "14. **30/08/2025**\n",
+      "    - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "    - Withdrawal: $1724.98\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $14977.40\n",
+      "\n",
+      "15. **30/08/2025**\n",
+      "    - Transaction: Subscription Spotify\n",
+      "    - Withdrawal: $1\n",
+      "... [56 more chars]\n",
+      "============================================================\n",
       "  Parsed 15 transactions\n",
       "  Date order: Chronological: 08/08/2025 → 30/08/2025\n",
       "  Balance correction: Transactions: 15, Debits: 10, Credits: 5, Corrections: 3 (type swaps: 3)\n",
@@ -1229,11 +1349,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cell-16",
    "metadata": {},
-   "outputs": [],
-   "source": "# Cell 9: View raw LLM responses (for debugging)\nprint(\"=\"*60)\nprint(\"RAW TURN 0 RESPONSE (Header Detection)\")\nprint(\"=\"*60)\nprint(result.raw_responses.get(\"turn0\", \"N/A\"))\n\nprint(\"\\n\" + \"=\"*60)\nprint(\"RAW TURN 1 RESPONSE (Extraction)\")\nprint(\"=\"*60)\nprint(result.raw_responses.get(\"turn1\", \"N/A\")[:10000])\nif len(result.raw_responses.get(\"turn1\", \"\")) > 10000:\n    print(\"... [truncated]\")\n\n# Debug: Show the exact prompt that was sent\nprint(\"\\n\" + \"=\"*60)\nprint(\"DEBUG: TURN 1 PROMPT THAT WAS SENT\")\nprint(\"=\"*60)\nimport yaml\nwith open(\"config/bank_prompts.yaml\") as f:\n    prompts_config = yaml.safe_load(f)\ntemplate = prompts_config[\"prompts\"][\"turn1_balance_extraction\"][\"template\"]\nactual_prompt = template.format(\n    balance_col=result.column_mapping.balance,\n    desc_col=result.column_mapping.description or \"Description\",\n    debit_col=result.column_mapping.debit or \"Debit\",\n    credit_col=result.column_mapping.credit or \"Credit\",\n)\nprint(actual_prompt)\nprint(\"=\"*60)"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "RAW TURN 0 RESPONSE (Header Detection)\n",
+      "============================================================\n",
+      "**Transaction Statement Column Headers**\n",
+      "\n",
+      "The transaction statement in the image uses the following column headers, in order from left to right:\n",
+      "\n",
+      "* **Date**\n",
+      "* **Transaction**\n",
+      "* **Withdrawal**\n",
+      "* **Deposit**\n",
+      "* **Balance**\n",
+      "\n",
+      "============================================================\n",
+      "RAW TURN 1 RESPONSE (Extraction)\n",
+      "============================================================\n",
+      "**BALANCE ENTRIES**\n",
+      "\n",
+      "1. **08/08/2025**\n",
+      "   - Transaction: Card Purchase KMART\n",
+      "   - Withdrawal: $1488.27\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8511.73\n",
+      "\n",
+      "2. **08/08/2025**\n",
+      "   - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "   - Withdrawal: $79.00\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8432.73\n",
+      "\n",
+      "3. **09/08/2025**\n",
+      "   - Transaction: Contactless Payment BUNNINGS\n",
+      "   - Withdrawal: $850.65\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $7582.08\n",
+      "\n",
+      "4. **12/08/2025**\n",
+      "   - Transaction: Interest Payment\n",
+      "   - Withdrawal: NOT_FOUND\n",
+      "   - Deposit: $1750.42\n",
+      "   - Balance: $9332.50\n",
+      "\n",
+      "5. **15/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Withdrawal: $1215.38\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $8117.12\n",
+      "\n",
+      "6. **15/08/2025**\n",
+      "   - Transaction: Direct Debit ACME CORP PTY LTD\n",
+      "   - Withdrawal: $1662.22\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $6454.90\n",
+      "\n",
+      "7. **18/08/2025**\n",
+      "   - Transaction: Interest Payment\n",
+      "   - Withdrawal: $4933.50\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $11388.40\n",
+      "\n",
+      "8. **18/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Withdrawal: $342.06\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $11046.34\n",
+      "\n",
+      "9. **20/08/2025**\n",
+      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET\n",
+      "   - Withdrawal: $1077.60\n",
+      "   - Deposit: NOT_FOUND\n",
+      "   - Balance: $9968.74\n",
+      "\n",
+      "10. **22/08/2025**\n",
+      "    - Transaction: Refund BIG W\n",
+      "    - Withdrawal: $1488.27\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $11457.01\n",
+      "\n",
+      "11. **25/08/2025**\n",
+      "    - Transaction: Insurance Premium AGL\n",
+      "    - Withdrawal: $437.75\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $11019.26\n",
+      "\n",
+      "12. **27/08/2025**\n",
+      "    - Transaction: Direct Credit SALARY\n",
+      "    - Withdrawal: $1142.92\n",
+      "    - Deposit: $12162.18\n",
+      "    - Balance: $12162.18\n",
+      "\n",
+      "13. **30/08/2025**\n",
+      "    - Transaction: Direct Credit SALARY\n",
+      "    - Withdrawal: $4540.20\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $16702.38\n",
+      "\n",
+      "14. **30/08/2025**\n",
+      "    - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "    - Withdrawal: $1724.98\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $14977.40\n",
+      "\n",
+      "15. **30/08/2025**\n",
+      "    - Transaction: Subscription Spotify\n",
+      "    - Withdrawal: $1992.32\n",
+      "    - Deposit: NOT_FOUND\n",
+      "    - Balance: $12905.08\n",
+      "\n",
+      "============================================================\n",
+      "DEBUG: TURN 1 PROMPT THAT WAS SENT\n",
+      "============================================================\n",
+      "List all the balances in the Balance column, including:\n",
+      "- Date from the Date Header of the balance\n",
+      "- Transaction\n",
+      "- Withdrawal Amount or \"NOT_FOUND\"\n",
+      "- Deposit Amount or \"NOT_FOUND\"\n",
+      "\n",
+      "Format each balance entry like this:\n",
+      "1. **[Date]**\n",
+      "   - Transaction: [description text]\n",
+      "   - Withdrawal: [amount or NOT_FOUND]\n",
+      "   - Deposit: [amount or NOT_FOUND]\n",
+      "   - Balance: [balance amount]\n",
+      "\n",
+      "CRITICAL RULES:\n",
+      "1. List EVERY balance entry in order from top to bottom\n",
+      "2. EVERY balance entry has a date, either on the same row, or above\n",
+      "3. Include the FULL description text, not abbreviated\n",
+      "4. If amount is in Withdrawal column, put it there and use NOT_FOUND for Deposit\n",
+      "5. If amount is in Deposit column, put it there and use NOT_FOUND for Withdrawal\n",
+      "6. Do NOT skip any transactions\n",
+      "\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 9: View raw LLM responses (for debugging)\n",
+    "print(\"=\"*60)\n",
+    "print(\"RAW TURN 0 RESPONSE (Header Detection)\")\n",
+    "print(\"=\"*60)\n",
+    "print(result.raw_responses.get(\"turn0\", \"N/A\"))\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"RAW TURN 1 RESPONSE (Extraction)\")\n",
+    "print(\"=\"*60)\n",
+    "print(result.raw_responses.get(\"turn1\", \"N/A\")[:10000])\n",
+    "if len(result.raw_responses.get(\"turn1\", \"\")) > 10000:\n",
+    "    print(\"... [truncated]\")\n",
+    "\n",
+    "# Debug: Show the exact prompt that was sent\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"DEBUG: TURN 1 PROMPT THAT WAS SENT\")\n",
+    "print(\"=\"*60)\n",
+    "import yaml\n",
+    "with open(\"config/bank_prompts.yaml\") as f:\n",
+    "    prompts_config = yaml.safe_load(f)\n",
+    "template = prompts_config[\"prompts\"][\"turn1_balance_extraction\"][\"template\"]\n",
+    "actual_prompt = template.format(\n",
+    "    balance_col=result.column_mapping.balance,\n",
+    "    desc_col=result.column_mapping.description or \"Description\",\n",
+    "    debit_col=result.column_mapping.debit or \"Debit\",\n",
+    "    credit_col=result.column_mapping.credit or \"Credit\",\n",
+    ")\n",
+    "print(actual_prompt)\n",
+    "print(\"=\"*60)"
+   ]
   },
   {
    "cell_type": "markdown",
