--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4354b1352ead451f972683c3e3323768",
+       "model_id": "d5f9495796bd48f38117b8500404e56e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -866,7 +866,7 @@
       "\n",
       "Format each balance entry like this:\n",
       "1. **[Date]**\n",
-      "   - Transaction: [description text]\n",
+      "   - Transaction: [ALL rows of text for this transaction]\n",
       "   - Withdrawal: [amount or NOT_FOUND]\n",
       "   - Deposit: [amount or NOT_FOUND]\n",
       "   - Balance: [balance amount]\n",
@@ -874,7 +874,7 @@
       "CRITICAL RULES:\n",
       "1. List EVERY balance entry in order from top to bottom\n",
       "2. EVERY balance entry has a date, either on the same row, or above\n",
-      "3. Include the FULL description text, not abbreviated\n",
+      "3. Include the FULL Transaction text - capture ALL rows that belong to this transaction, not abbreviated\n",
       "4. If amount is in Withdrawal column, put it there and use NOT_FOUND for Deposit\n",
       "5. If amount is in Deposit column, put it there and use NOT_FOUND for Withdrawal\n",
       "6. Do NOT skip any transactions\n",
@@ -883,100 +883,94 @@
       "============================================================\n",
       "DEBUG: RAW TURN 1 RESPONSE (first 2000 chars)\n",
       "============================================================\n",
-      "**BALANCE ENTRIES**\n",
+      "**Transaction Statement for Christopher Paul White**\n",
+      "\n",
+      "**Commonwealth Bank**\n",
+      "\n",
+      "**Transaction Statement**\n",
+      "\n",
+      "**Account Holder:** CHRISTOPHER PAUL WHITE\n",
+      "\n",
+      "**Statement Period:** 08/08/2025 - 30/08/2025\n",
+      "\n",
+      "**Transaction Details:**\n",
       "\n",
       "1. **08/08/2025**\n",
-      "   - Transaction: Card Purchase KMART\n",
+      "   - Transaction: Card Purchase KMART PERTH WA\n",
       "   - Withdrawal: $1488.27\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8511.73\n",
       "\n",
       "2. **08/08/2025**\n",
-      "   - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "   - Transaction: ATM Withdrawal WESTPAC ATM PERTH WA\n",
       "   - Withdrawal: $79.00\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8432.73\n",
       "\n",
       "3. **09/08/2025**\n",
-      "   - Transaction: Contactless Payment BUNNINGS\n",
+      "   - Transaction: Contactless Payment BUNNINGS CANBERRA ACT\n",
       "   - Withdrawal: $850.65\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $7582.08\n",
       "\n",
       "4. **12/08/2025**\n",
-      "   - Transaction: Interest Payment\n",
+      "   - Transaction: Interest Payment Ref: 23396P22448136\n",
       "   - Withdrawal: NOT_FOUND\n",
       "   - Deposit: $1750.42\n",
       "   - Balance: $9332.50\n",
       "\n",
       "5. **15/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS SYDNEY NSW\n",
       "   - Withdrawal: $1215.38\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8117.12\n",
       "\n",
       "6. **15/08/2025**\n",
-      "   - Transaction: Direct Debit ACME CORP PTY LTD\n",
+      "   - Transaction: Direct Debit ACME CORP PTY LTD Ref: 35203P19335534\n",
       "   - Withdrawal: $1662.22\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $6454.90\n",
       "\n",
       "7. **18/08/2025**\n",
-      "   - Transaction: Interest Payment\n",
+      "   - Transaction: Interest Payment Ref: 59823P47308985\n",
       "   - Withdrawal: $4933.50\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $11388.40\n",
       "\n",
       "8. **18/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS HOBART TAS\n",
       "   - Withdrawal: $342.06\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $11046.34\n",
       "\n",
       "9. **20/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET\n",
+      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET PERTH WA\n",
       "   - Withdrawal: $1077.60\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $9968.74\n",
       "\n",
       "10. **22/08/2025**\n",
-      "    - Transaction: Refund BIG W\n",
+      "    - Transaction: Refund BIG W Ref: 40021P14308421\n",
       "    - Withdrawal: $1488.27\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $11457.01\n",
       "\n",
       "11. **25/08/2025**\n",
-      "    - Transaction: Insurance Premium AGL\n",
+      "    - Transaction: Insurance Premium AGL Policy 55909P77005685\n",
       "    - Withdrawal: $437.75\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $11019.26\n",
       "\n",
       "12. **27/08/2025**\n",
-      "    - Transaction: Direct Credit SALARY\n",
+      "    - Transaction: Direct Credit SALARY Ref: 83579P82340307\n",
       "    - Withdrawal: $1142.92\n",
-      "    - Deposit: $12162.18\n",
-      "    - Balance: $12162.18\n",
-      "\n",
-      "13. **30/08/2025**\n",
-      "    - Transaction: Direct Credit SALARY\n",
-      "    - Withdrawal: $4540.20\n",
       "    - Deposit: NOT_FOUND\n",
-      "    - Balance: $16702.38\n",
-      "\n",
-      "14. **30/08/2025**\n",
-      "    - Transaction: ATM Withdrawal WESTPAC ATM\n",
-      "    - Withdrawal: $1724.98\n",
-      "    - Deposit: NOT_FOUND\n",
-      "    - Balance: $14977.40\n",
-      "\n",
-      "15. **30/08/2025**\n",
-      "    - Transaction: Subscription Spotify\n",
-      "    - Withdrawal: $1\n",
-      "... [56 more chars]\n",
+      " \n",
+      "... [496 more chars]\n",
       "============================================================\n",
       "  Parsed 15 transactions\n",
       "  Date order: Chronological: 08/08/2025 → 30/08/2025\n",
-      "  Balance correction: Transactions: 15, Debits: 10, Credits: 5, Corrections: 3 (type swaps: 3)\n",
+      "  Balance correction: Transactions: 15, Debits: 10, Credits: 5, Corrections: 4 (type swaps: 4)\n",
       "  Filtered to 10 debit transactions\n",
       "\n",
       "============================================================\n",
@@ -1054,8 +1048,8 @@
       "  Total transactions: 15\n",
       "  Debits identified: 10\n",
       "  Credits identified: 5\n",
-      "  Corrections made: 3\n",
-      "    - Type swaps (debit<->credit): 3\n",
+      "  Corrections made: 4\n",
+      "    - Type swaps (debit<->credit): 4\n",
       "\n",
       "============================================================\n",
       "EXTRACTED SCHEMA FIELDS\n",
@@ -1071,7 +1065,7 @@
       "  08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/202...\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Card Purchase KMART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WO...\n",
+      "  Card Purchase KMART PERTH WA | ATM Withdrawal WESTPAC ATM PERTH WA | Contactless Payment BUNNINGS CA...\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
       "  $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992....\n",
@@ -1141,16 +1135,16 @@
       "============================================================\n",
       "DEBIT TRANSACTIONS\n",
       "============================================================\n",
-      "1. [08/08/2025] Card Purchase KMART - $1488.27\n",
-      "2. [08/08/2025] ATM Withdrawal WESTPAC ATM - $79.00\n",
-      "3. [09/08/2025] Contactless Payment BUNNINGS - $850.65\n",
-      "4. [15/08/2025] EFTPOS Purchase WOOLWORTHS - $1215.38\n",
-      "5. [15/08/2025] Direct Debit ACME CORP PTY LTD - $1662.22\n",
-      "6. [18/08/2025] EFTPOS Purchase WOOLWORTHS - $342.06\n",
-      "7. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET - $1077.60\n",
-      "8. [25/08/2025] Insurance Premium AGL - $437.75\n",
-      "9. [30/08/2025] ATM Withdrawal WESTPAC ATM - $1724.98\n",
-      "10. [30/08/2025] Subscription Spotify - $1992.32\n"
+      "1. [08/08/2025] Card Purchase KMART PERTH WA - $1488.27\n",
+      "2. [08/08/2025] ATM Withdrawal WESTPAC ATM PERTH WA - $79.00\n",
+      "3. [09/08/2025] Contactless Payment BUNNINGS CANBERRA ACT - $850.65\n",
+      "4. [15/08/2025] EFTPOS Purchase WOOLWORTHS SYDNEY NSW - $1215.38\n",
+      "5. [15/08/2025] Direct Debit ACME CORP PTY LTD Ref: 35203P19335534 - $1662.22\n",
+      "6. [18/08/2025] EFTPOS Purchase WOOLWORTHS HOBART TAS - $342.06\n",
+      "7. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET PERTH WA - $1077.60\n",
+      "8. [25/08/2025] Insurance Premium AGL Policy 55909P77005685 - $437.75\n",
+      "9. [30/08/2025] ATM Withdrawal WESTPAC ATM BRISBANE QLD - $1724.98\n",
+      "10. [30/08/2025] Subscription Spotify Monthly 82512P11540956 - $1992.32\n"
      ]
     }
    ],
@@ -1209,7 +1203,7 @@
       "✅ OK     DOCUMENT_TYPE                   100.0%  100.0%  100.0%\n",
       "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
       "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
-      "❌ FAIL   LINE_ITEM_DESCRIPTIONS           18.2%  100.0%   10.0%\n",
+      "⚠️ PART  LINE_ITEM_DESCRIPTIONS           94.7%  100.0%   90.0%\n",
       "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
       "------------------------------------------------------------------------------------------\n",
       "\n",
@@ -1229,7 +1223,7 @@
       "  Ground Truth: 08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/2025 | 30/08/2025 | 30/08/2025\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Extracted:    Card Purchase KMART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WOOLWORTHS | Direct Debit ACME CORP PTY LTD | EFTPOS Purchase WOOLWORTHS | EFTPOS Purchase COLES SUPERMARKET | Insurance Premium AGL | ATM Withdrawal WESTPAC ATM | Subscription Spotify\n",
+      "  Extracted:    Card Purchase KMART PERTH WA | ATM Withdrawal WESTPAC ATM PERTH WA | Contactless Payment BUNNINGS CANBERRA ACT | EFTPOS Purchase WOOLWORTHS SYDNEY NSW | Direct Debit ACME CORP PTY LTD Ref: 35203P19335534 | EFTPOS Purchase WOOLWORTHS HOBART TAS | EFTPOS Purchase COLES SUPERMARKET PERTH WA | Insurance Premium AGL Policy 55909P77005685 | ATM Withdrawal WESTPAC ATM BRISBANE QLD | Subscription Spotify Monthly 82512P11540956\n",
       "  Ground Truth: Card Purchase KMART PERTH WA | ATM Withdrawal WESTPAC ATM PERTH WA | Contactless Payment BUNNINGS CANBERRA ACT | EFTPOS Purchase WOOLWORTHS SYDNEY NSW | Direct Debit ACME CORP PTY LTD Ref: 35203P19335534 | EFTPOS Purchase WOOLWORTHS HOBART TAS | EFTPOS Purchase COLES SUPERMARKET PERTH WA | Insurance Premium AGL Policy 95909P77005685 | ATM Withdrawal WESTPAC ATM BRISBANE QLD | Subscription Spotify Monthly 82512P11540956\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
@@ -1237,7 +1231,7 @@
       "  Ground Truth: $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992.32\n",
       "\n",
       "==========================================================================================\n",
-      "📊 OVERALL F1 SCORE: 83.6%\n",
+      "📊 OVERALL F1 SCORE: 98.9%\n",
       "==========================================================================================\n"
      ]
     }
@@ -1373,94 +1367,104 @@
       "============================================================\n",
       "RAW TURN 1 RESPONSE (Extraction)\n",
       "============================================================\n",
-      "**BALANCE ENTRIES**\n",
+      "**Transaction Statement for Christopher Paul White**\n",
+      "\n",
+      "**Commonwealth Bank**\n",
+      "\n",
+      "**Transaction Statement**\n",
+      "\n",
+      "**Account Holder:** CHRISTOPHER PAUL WHITE\n",
+      "\n",
+      "**Statement Period:** 08/08/2025 - 30/08/2025\n",
+      "\n",
+      "**Transaction Details:**\n",
       "\n",
       "1. **08/08/2025**\n",
-      "   - Transaction: Card Purchase KMART\n",
+      "   - Transaction: Card Purchase KMART PERTH WA\n",
       "   - Withdrawal: $1488.27\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8511.73\n",
       "\n",
       "2. **08/08/2025**\n",
-      "   - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "   - Transaction: ATM Withdrawal WESTPAC ATM PERTH WA\n",
       "   - Withdrawal: $79.00\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8432.73\n",
       "\n",
       "3. **09/08/2025**\n",
-      "   - Transaction: Contactless Payment BUNNINGS\n",
+      "   - Transaction: Contactless Payment BUNNINGS CANBERRA ACT\n",
       "   - Withdrawal: $850.65\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $7582.08\n",
       "\n",
       "4. **12/08/2025**\n",
-      "   - Transaction: Interest Payment\n",
+      "   - Transaction: Interest Payment Ref: 23396P22448136\n",
       "   - Withdrawal: NOT_FOUND\n",
       "   - Deposit: $1750.42\n",
       "   - Balance: $9332.50\n",
       "\n",
       "5. **15/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS SYDNEY NSW\n",
       "   - Withdrawal: $1215.38\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $8117.12\n",
       "\n",
       "6. **15/08/2025**\n",
-      "   - Transaction: Direct Debit ACME CORP PTY LTD\n",
+      "   - Transaction: Direct Debit ACME CORP PTY LTD Ref: 35203P19335534\n",
       "   - Withdrawal: $1662.22\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $6454.90\n",
       "\n",
       "7. **18/08/2025**\n",
-      "   - Transaction: Interest Payment\n",
+      "   - Transaction: Interest Payment Ref: 59823P47308985\n",
       "   - Withdrawal: $4933.50\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $11388.40\n",
       "\n",
       "8. **18/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase WOOLWORTHS\n",
+      "   - Transaction: EFTPOS Purchase WOOLWORTHS HOBART TAS\n",
       "   - Withdrawal: $342.06\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $11046.34\n",
       "\n",
       "9. **20/08/2025**\n",
-      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET\n",
+      "   - Transaction: EFTPOS Purchase COLES SUPERMARKET PERTH WA\n",
       "   - Withdrawal: $1077.60\n",
       "   - Deposit: NOT_FOUND\n",
       "   - Balance: $9968.74\n",
       "\n",
       "10. **22/08/2025**\n",
-      "    - Transaction: Refund BIG W\n",
+      "    - Transaction: Refund BIG W Ref: 40021P14308421\n",
       "    - Withdrawal: $1488.27\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $11457.01\n",
       "\n",
       "11. **25/08/2025**\n",
-      "    - Transaction: Insurance Premium AGL\n",
+      "    - Transaction: Insurance Premium AGL Policy 55909P77005685\n",
       "    - Withdrawal: $437.75\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $11019.26\n",
       "\n",
       "12. **27/08/2025**\n",
-      "    - Transaction: Direct Credit SALARY\n",
+      "    - Transaction: Direct Credit SALARY Ref: 83579P82340307\n",
       "    - Withdrawal: $1142.92\n",
-      "    - Deposit: $12162.18\n",
+      "    - Deposit: NOT_FOUND\n",
       "    - Balance: $12162.18\n",
       "\n",
       "13. **30/08/2025**\n",
-      "    - Transaction: Direct Credit SALARY\n",
+      "    - Transaction: Direct Credit SALARY Ref: 38746P28566572\n",
       "    - Withdrawal: $4540.20\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $16702.38\n",
       "\n",
       "14. **30/08/2025**\n",
-      "    - Transaction: ATM Withdrawal WESTPAC ATM\n",
+      "    - Transaction: ATM Withdrawal WESTPAC ATM BRISBANE QLD\n",
       "    - Withdrawal: $1724.98\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $14977.40\n",
       "\n",
       "15. **30/08/2025**\n",
-      "    - Transaction: Subscription Spotify\n",
+      "    - Transaction: Subscription Spotify Monthly 82512P11540956\n",
       "    - Withdrawal: $1992.32\n",
       "    - Deposit: NOT_FOUND\n",
       "    - Balance: $12905.08\n",
@@ -1476,7 +1480,7 @@
       "\n",
       "Format each balance entry like this:\n",
       "1. **[Date]**\n",
-      "   - Transaction: [description text]\n",
+      "   - Transaction: [ALL rows of text for this transaction]\n",
       "   - Withdrawal: [amount or NOT_FOUND]\n",
       "   - Deposit: [amount or NOT_FOUND]\n",
       "   - Balance: [balance amount]\n",
@@ -1484,7 +1488,7 @@
       "CRITICAL RULES:\n",
       "1. List EVERY balance entry in order from top to bottom\n",
       "2. EVERY balance entry has a date, either on the same row, or above\n",
-      "3. Include the FULL description text, not abbreviated\n",
+      "3. Include the FULL Transaction text - capture ALL rows that belong to this transaction, not abbreviated\n",
       "4. If amount is in Withdrawal column, put it there and use NOT_FOUND for Deposit\n",
       "5. If amount is in Deposit column, put it there and use NOT_FOUND for Withdrawal\n",
       "6. Do NOT skip any transactions\n",
